--- a/caos9df8gukdsasd9hfjlksas.cabal
+++ b/caos9df8gukdsasd9hfjlksas.cabal
@@ -29,7 +29,7 @@ version:            0.1.0.0
 -- description:
 
 -- The license under which the package is released.
-license:            BSD-2-Clause
+license:            WTFPL
 
 -- The file containing the license text.
 license-file:       LICENSE
